# ether-rs-ts-test-tamplate

./: .env.example  .gitignore  Cargo.toml  Lock.json  README.md  build.rs  hardhat.config.ts  package-lock.json  package.json
abi/: Lock.json
contracts/: Lock.sol
src/: main.rs
src/bindings/: lock.rs
